@@ -2,7 +2,6 @@ import java.util.ArrayDeque;
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.Queue;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 class Solution {
@@ -14,8 +13,7 @@ class Solution {
             .mapToInt(x -> x)
             .toArray();
 
-    Queue<Integer> rest =
-        new ArrayDeque<>(Arrays.stream(A).sorted().boxed().collect(Collectors.toList()));
+    Queue<Integer> rest = new ArrayDeque<>(Arrays.stream(A).sorted().boxed().toList());
     Queue<Integer> extras = new ArrayDeque<>();
 
     int[] result = new int[A.length];
