@@ -6,7 +6,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Queue;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 class Solution {
@@ -41,6 +40,6 @@ class Solution {
       }
     }
 
-    return result.stream().sorted().collect(Collectors.toList());
+    return result.stream().sorted().toList();
   }
 }
