@@ -1,25 +1,24 @@
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class Solution {
-	public List<Boolean> camelMatch(String[] queries, String pattern) {
-		return Arrays.stream(queries).map(query -> isCamelMatch(query, pattern)).collect(Collectors.toList());
-	}
+  public List<Boolean> camelMatch(String[] queries, String pattern) {
+    return Arrays.stream(queries).map(query -> isCamelMatch(query, pattern)).toList();
+  }
 
-	boolean isCamelMatch(String query, String pattern) {
-		int patternIndex = 0;
-		for (char target : query.toCharArray()) {
-			if (patternIndex == pattern.length()) {
-				if (!Character.isLowerCase(target)) {
-					return false;
-				}
-			} else if (pattern.charAt(patternIndex) == target) {
-				patternIndex++;
-			} else if (!Character.isLowerCase(target)) {
-				return false;
-			}
-		}
-		return patternIndex == pattern.length();
-	}
+  boolean isCamelMatch(String query, String pattern) {
+    int patternIndex = 0;
+    for (char target : query.toCharArray()) {
+      if (patternIndex == pattern.length()) {
+        if (!Character.isLowerCase(target)) {
+          return false;
+        }
+      } else if (pattern.charAt(patternIndex) == target) {
+        patternIndex++;
+      } else if (!Character.isLowerCase(target)) {
+        return false;
+      }
+    }
+    return patternIndex == pattern.length();
+  }
 }
