@@ -1,5 +1,4 @@
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 class Solution {
@@ -10,10 +9,10 @@ class Solution {
                 IntStream.rangeClosed(1, 9)
                     .filter(i -> (code & (1 << (i - 1))) != 0)
                     .boxed()
-                    .collect(Collectors.toList()))
+                    .toList())
         .filter(
             combination ->
                 combination.size() == k && combination.stream().mapToInt(x -> x).sum() == n)
-        .collect(Collectors.toList());
+        .toList();
   }
 }
