@@ -2,23 +2,24 @@ import java.util.Arrays;
 import java.util.stream.Collectors;
 
 public class Solution {
-	public String findReplaceString(String S, int[] indexes, String[] sources, String[] targets) {
-		String[] replaced = new String[S.length()];
-		Arrays.fill(replaced, "");
+  public String findReplaceString(String S, int[] indexes, String[] sources, String[] targets) {
+    String[] replaced = new String[S.length()];
+    Arrays.fill(replaced, "");
 
-		for (int i = 0; i < replaced.length;) {
-			int index = Arrays.stream(indexes).boxed().collect(Collectors.toList()).indexOf(i);
-			if (index >= 0 && S.startsWith(sources[index], i)) {
-				replaced[i] = targets[index];
+    int currentIndex = 0;
+    while (currentIndex < replaced.length) {
+      int index = Arrays.stream(indexes).boxed().toList().indexOf(currentIndex);
+      if (index >= 0 && S.startsWith(sources[index], currentIndex)) {
+        replaced[currentIndex] = targets[index];
 
-				i += sources[index].length();
-			} else {
-				replaced[i] = String.valueOf(S.charAt(i));
+        currentIndex += sources[index].length();
+      } else {
+        replaced[currentIndex] = String.valueOf(S.charAt(currentIndex));
 
-				i++;
-			}
-		}
+        currentIndex++;
+      }
+    }
 
-		return Arrays.stream(replaced).collect(Collectors.joining(""));
-	}
+    return Arrays.stream(replaced).collect(Collectors.joining(""));
+  }
 }
